--- a/standalone_review/src/net/npike/intellij/standalonereview/ui/IssuePanel.form
+++ b/standalone_review/src/net/npike/intellij/standalonereview/ui/IssuePanel.form
@@ -12,9 +12,12 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="400" height="200"/>
+            <maximum-size width="600" height="200"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <lineWrap value="true"/>
+        </properties>
       </component>
     </children>
   </grid>
