--- a/standalone_review/src/net/npike/intellij/standalonereview/ui/IssuePanel.form
+++ b/standalone_review/src/net/npike/intellij/standalonereview/ui/IssuePanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="net.npike.intellij.standalonereview.ui.IssuePanel">
-  <grid id="27dc6" binding="myPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="myPane" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -10,15 +10,41 @@
     <children>
       <component id="cb7db" class="javax.swing.JTextArea" binding="mTextAreaComment">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="400" height="200"/>
-            <maximum-size width="600" height="200"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="400" height="100"/>
+            <preferred-size width="400" height="100"/>
+            <maximum-size width="600" height="100"/>
           </grid>
         </constraints>
         <properties>
           <lineWrap value="true"/>
         </properties>
       </component>
+      <scrollpane id="3c99b">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="100"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="d13d0" class="javax.swing.JTextArea" binding="jTextAreaCodePreview">
+            <constraints/>
+            <properties>
+              <background color="-4471353"/>
+              <editable value="false"/>
+              <enabled value="false"/>
+              <lineWrap value="true"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <hspacer id="211f1">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
